<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/TableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        tools:context=".MainActivity">

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/button_donteven"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="5dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_donteventryit"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_nooo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_noooo"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/button_eeeeh"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="5dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_eeeeh"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_puss"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_puss"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/button_growl"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_shortgrowl"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_saranara"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_saranara"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/button_growlkitty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_longgrowl"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_schmee"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_schmee"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/button_hey"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_hey"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_disgust"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_thatsdisgust"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/button_pussyface"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_heypussyface"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_whatthecrap"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_whatthecrap"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/button_biteyou"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_imgonnabiteyou"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_noodles"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_noodles"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/button_delish"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_itsdelish"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_whosthekiki"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_whosthekiki"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/button_punk"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_usedtobepunk"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_whydyoudoit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:background="@drawable/stroked"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="@string/sound_whydyoudoit"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </TableRow>
    </TableLayout>
</LinearLayout>

